--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -18,3 +18,7 @@ jobs:
           SHOW_PROJECTS: False
           SHOW_LANGUAGE_PER_REPO: False
           SHOW_UPDATED_DATE: True
+          SHOW_PROFILE_VIEWS: False
+          SHOW_COMMIT: False
+          SHOW_SHORT_INFO: False
+          SHOW_LOC_CHART: False
